--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/hapi__joi": "^17.1.8",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
