--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -42,7 +43,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "env-cmd": "^10.1.0",
+    "handlebars": "^4.7.7",
     "install": "^0.13.0",
+    "nestjs-i18n": "^10.2.1",
+    "nodemailer": "^6.8.0",
     "npm": "^9.1.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
