--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "env-cmd": "^10.1.0",
     "handlebars": "^4.7.7",
     "install": "^0.13.0",
+    "multer": "^1.4.5-lts.1",
     "nestjs-i18n": "^10.2.1",
     "nodemailer": "^6.8.0",
     "npm": "^9.1.2",
@@ -64,6 +65,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
