--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,8 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
-**/*.env
+**/test.env
+**/production.env
+.dockerignore
+docker-compose.yml
+Dockerfile
